# ipig_system

./: .coderabbit.yaml  .cursorrules  .env.example  .gitattributes  .gitignore  .gitleaks.toml  .trivyignore  20260305_TU-04-00-01_耗材藥品庫存清表(年)_V.0315(TEST).csv  20260305_TU-04-00-01_耗材藥品庫存清表(年)_V.0315_REFACTORED.csv  @PROGRESS.md  @TODO.md  AUP.md  CLAUDE.md  DEPLOYMENT.md  DESIGN.md  DR_RUNBOOK.md  GLP_VALIDATION.md  LICENSE  PROGRESS.md  QUICK_START.md  README.md  TODO.md  USER_GUIDE.md  _Spec.md  _sqlx_migrations_v2.tsv  backup_before_restore_20260301_163854.dump  backup_before_restore_20260301_163914.dump  backup_before_restore_20260301_163940.dump  backup_before_restore_20260301_163949.dump  cloudflared-config.yml  daily_summary_2026-02-02.md  description  description.md  docker-compose.logging.yml  docker-compose.monitoring.yml  docker-compose.prod.yml  docker-compose.test.ci-local.yml  docker-compose.test.yml  docker-compose.waf.yml  docker-compose.yml  (+27 more)
backend/: .dockerignore  Cargo.toml  Dockerfile  build.rs  build_errors.txt  build_errors_utf8.txt  build_final.txt  build_output.txt  check_output.json  ci-fail.txt  clippy.toml  compile_errors.txt  compile_status.txt  deny.toml  env.sample  error.txt  full_compile_status.txt  migration_entry.txt  sqlx_prepare2.txt  sqlx_prepare3.txt  sqlx_prepare4.txt  sqlx_prepare5.txt  sqlx_prepare_output.txt  startup_err.txt  startup_log.txt  test_output.txt
backend/.cargo/: config.toml
backend/.sqlx/: QUERY_INDEX.md  query-01b42f232544cbd535ad642fe03299f98e082cfa9dcc079dbc178c07aa02be84.json  query-0a7dedee1d63b93501f35dc1e461a5ef3f2b357414ba031468af5dc8b1437b02.json  query-0bbfee0b8eb10cb3351108e98e45e0cc87b9d305eee582a7e7161ad2719c7637.json  query-0c89c61d8be18603e0a4473f9032f90f97b152a7d0b10728a466eba083823208.json  query-0f1b8d3e20f7a10095cc6118271876594369f5fec1a91c4f7faed5f6261e945a.json  query-115ee43b69cd872feb6e4322bfa8ad485fd0d299a7b7d4f080a215a8a6fc0ae2.json  query-128d6f21cd0b9657fa358359fee1faae96b049472c463b2b2d86094434af6cd1.json  query-1297b634574d88fff615aec6bb38f1e8ee8c848c4c00b536081317cf4c1d21bf.json  query-136e196bb7ded1b14c71441c3821d8498fa5b4354e3d5a489c0076cee5abab01.json  query-153b2a10914db91c9d9de905d54f2b3866c6eee17faca585a09fcda80fa78bb7.json  query-1d701b2e704c565507d3939b136262fca5386dcf9073bc0966a3ced315748c63.json  query-1ec39958212893e268c17595db7ca845883d74450818235dd9c0d99beede5b22.json  query-1fbb7a75d6ee7123da3fe2919a994ecba387528a8f9d9724937003eb33dda409.json  query-236b7712b615ed6fddf49135d48174a680fc10446fc7355db787a7ba0ec66505.json  query-26181675611eeb9bb1cf6ec1f060f991fc4c4bc855dd09c1506d5675e3136217.json  query-272e9227829159915a8e9aa2a986f1e47aeb293487eb9f0e3b44b3354042ec78.json  query-2dcbc5e5d763420a28efcf3c1e15ae3a80ba02f2def71802b45b3d402176594e.json  query-3270426c57a0191767fa1227d1e21d014938b4c1571f6b90d98536eaa77bbd2c.json  query-32e83ae35cc056c77b60bacbf1d5f836299be831ed9f70c9f140d03888ee35ca.json  query-33a28a71259133b41ed397ca528f74613cbcaa3feb37dfbc4dff5b8674ae8a68.json  query-34c7a95e349b284eab88c4d2be347cbff66596e718cb9155055f147914039fbc.json  query-38aeed129e5568240ce9a805d14d8192925058567ca22f9ea18939015a762381.json  query-3b2fdc5d3664b7b8f7de3ad1e42b6e8f183f2347479d5e57b03b978bd7225dcf.json  query-3d5c73178ea8d2598f8400e343e00955d0e13e83b9608b2545e9856ee2bfac57.json  query-3e37899614a8d378267094c6258628f6fdcaaea49827dcae17487b1e3ead60c3.json  query-3e90acf3639f484abba16ade25c65fb7c097fbf2916132c7b29cb6dd55b688a5.json  query-4088f701a02802bb1d592ab78f0d65486a5222795749260b77e022aed2dc2c9b.json  query-430a898db47972c2f0742791df4c854879f7417ba8c382efb9e6ddc15bca1b5e.json  query-44b070b7a67350f8ebd872d451a77b685f0c78ef2f7758148367ceb492df848e.json  query-477d359f8b5626b8ccf40cf171e96035d2710df170babd02992c3b76cb26c2e2.json  query-49226af9bd9d3034e585eb0a35913e9f0bee0cda656d1dbfe6f6ce94a9e19e04.json  query-49b0c6d883cc8d48ae1935117076dbbaca98c1430e312779521b75fe9789027d.json  query-4d02910462126542e943cadbe069dca55c3b9b5aece040af974ecec5b022fdc3.json  query-4d26e22469b664c167ee257f213fc501e37f709a70163bdfb8f445b95bfd0299.json  query-4f08a19449e6b38806898cec4ac2caede0c9e244de5fc226fdea547ad1891595.json  query-4f4b94c7bfa568977efd080c06d365d054c6bf6950b4d87b609d66f51e114ac1.json  query-535731bf32e54310b51b57352388b3ef43b5dcc6ce9dc8017b16bba80088edeb.json  query-59415812fdb679dbaac10e82b07646368d38bcfcdac4a146f5e279f34a42853d.json  query-62ab1cffa407aaaf86a8efab5fc267462ea7272532103032db6e596fc407b90e.json  (+44 more)
backend/examples/: parse_mail.rs
backend/fuzz/: Cargo.toml
backend/migrations/: 001_aup_system.sql  001_core_schema.sql  001_enums.sql  001_schema.sql  001_types.sql  002_animal_management.sql  002_auth_users.sql  002_core_permissions.sql  002_seed_data.sql  002_users_auth.sql  003_animal_management.sql  003_aup_system.sql  003_notifications.sql  003_notifications_attachments.sql  003_notifications_roles_seed.sql  003_permissions.sql  004_animal_management.sql  004_aup_system.sql  004_hr_system.sql  004_roles_permissions.sql  004_security_audit.sql  005_animal_management.sql  005_audit_system.sql  005_aup_system.sql  005_facility.sql  005_hr_system.sql  006_animal_management.sql  006_audit_system.sql  006_aup_system.sql  006_erp_warehouse.sql  006_hr_system.sql  007_audit_erp.sql  007_aup_protocol.sql  007_erp_warehouse.sql  007_hr_system.sql  007_supplementary.sql  008_audit_erp.sql  008_aup_review_enhancement.sql  008_fixes.sql  008_hr_system.sql  (+139 more)
backend/migrations_old/: .gitattributes
backend/migrations_squashed/: 001_types.sql  002_users_auth.sql  003_animal_management.sql  004_aup_system.sql  005_hr_system.sql  006_erp_warehouse.sql  007_audit_security.sql  008_facility_equipment.sql
backend/src/: config.rs  constants.rs  error.rs  lib.rs  main.rs  openapi.rs  routes.rs  time.rs
backend/tests/: api_animals.rs  api_audit_chain_lock.rs  api_audit_r26.rs  api_auth.rs  api_calendar.rs  api_edge_cases.rs  api_etag.rs  api_glp_amendment_lock.rs  api_glp_amendment_terminal_guard.rs  api_glp_record_lock.rs  api_health.rs  api_invitations.rs  api_protocols.rs  (+4 more)
(+1829 files in other folders)
