[project]
name = "ipig-system"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "delightening", email = "jason4617987@gmail.com" }
]
requires-python = ">=3.12"
dependencies = [
    "python-dotenv>=1.2.1",
    "requests>=2.32.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0",
]
