[package]
name = "erp-backend"
version = "0.1.0"
edition = "2021"
default-run = "erp-backend"
description = "iPig ERP 後端服務"
license = "MIT"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
axum-extra = { version = "0.9", features = ["typed-header"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "set-header"] }
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json", "macros", "migrate"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.19", features = ["derive"] }

# OpenAPI
utoipa = { version = "4", features = ["axum_extras", "uuid", "chrono"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "1"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Additional utilities
regex = "1"
rand = "0.8"
async-stream = "0.3"
futures = "0.3"

# Excel generation
rust_xlsxwriter = "0.93"

# Excel/CSV parsing
calamine = { version = "0.24", features = ["chrono"] }
csv = "1.3"

# Scheduler
tokio-cron-scheduler = "0.11"

# Hashing for migration resolution and audit integrity
sha2 = "0.10"
hmac = "0.12"

# TOTP 2FA
totp-rs = { version = "5", features = ["otpauth", "qr", "serde_support", "gen_secret"] }

# GeoIP
maxminddb = "0.27"

# PDF generation
printpdf = "0.7"

# HTTP Client for external APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }
base64 = "0.22"
urlencoding = "2.1"

# Prometheus Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.16", default-features = false, features = ["http-listener"] }

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serial_test = "3"

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[[bin]]
name = "healthcheck"
path = "src/bin/healthcheck.rs"

# 安全強化：Release 模式下也檢查整數溢位
[profile.release]
overflow-checks = true