[package]
name = "erp-backend"
version = "0.1.0"
edition = "2021"
default-run = "erp-backend"
description = "iPig ERP 後端服務"
license = "MIT"

[dependencies]
# Web Framework
axum = { version = "0.7", features = ["macros", "multipart"] }
http-body-util = "0.1"
axum-extra = { version = "0.12", features = ["typed-header"] }
tower = "0.5"
tower-http = { version = "0.5", features = ["cors", "trace", "request-id", "set-header"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"

# Database
sqlx = { version = "0.8", default-features = false, features = ["runtime-tokio", "postgres", "uuid", "chrono", "rust_decimal", "json", "macros", "migrate"] }

# Auth
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
argon2 = "0.5"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Validation
validator = { version = "0.20", features = ["derive"] }

# OpenAPI
utoipa = { version = "5", features = ["axum_extras", "uuid", "chrono", "decimal"] }
utoipa-swagger-ui = { version = "8", features = ["axum"] }

# Utilities
uuid = { version = "1", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
rust_decimal = { version = "1", features = ["serde"] }
thiserror = "2"
anyhow = "1"
dotenvy = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# Email
lettre = { version = "0.11", features = ["tokio1-native-tls", "builder", "smtp-transport"] }

# Additional utilities
regex = "1"
rand = "0.8"

# Excel generation
rust_xlsxwriter = "0.93"

# Excel/CSV parsing
calamine = { version = "0.24", features = ["chrono"] }
csv = "1.3"

# Scheduler
tokio-cron-scheduler = "0.15"

# Hashing for migration resolution and audit integrity
sha2 = "0.10"
hmac = "0.12"
hex = "0.4"

# TOTP 2FA
totp-rs = { version = "5", features = ["otpauth", "qr", "serde_support", "gen_secret"] }

# GeoIP
maxminddb = "0.27"

# PDF generation
printpdf = "0.9"
lopdf = "0.34"
tera = "1"

# Zip (IDXF 分檔匯出/匯入)
zip = "0.6"

# HTTP Client for external APIs
reqwest = { version = "0.12", features = ["json", "rustls-tls", "multipart"] }
base64 = "0.22"
urlencoding = "2.1"

# Prometheus Metrics
metrics = "0.24"
metrics-exporter-prometheus = { version = "0.18", default-features = false, features = ["http-listener"] }
dashmap = "6.1.0"

[dev-dependencies]
tokio-test = "0.4"
reqwest = { version = "0.12", features = ["json", "cookies"] }
serial_test = "3"
jsonwebtoken = { version = "10", default-features = false, features = ["rust_crypto", "use_pem"] }
chrono = { version = "0.4" }
p256 = { version = "0.13", features = ["pkcs8", "pem", "rand_core"] }

[[bin]]
name = "create_admin"
path = "src/bin/create_admin.rs"

[[bin]]
name = "create_guest"
path = "src/bin/create_guest.rs"

[[bin]]
name = "healthcheck"
path = "src/bin/healthcheck.rs"

# 安全強化：Release 模式下也檢查整數溢位
[profile.release]
overflow-checks = true
